# simple-pipes

./: .bumpversion.cfg  .cspell.json  .quickdocs.yml  README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
docs/sphinx/: conf.py
pipes/: __init__.py  pipes.py
scripts/: jobs.yml
simple_pipes/: pipes.py
src/: __init__.py  pipes.py
test/: test_pipes.py
